--- a/src/app/home/components/navbar/navbar.component.html
+++ b/src/app/home/components/navbar/navbar.component.html
@@ -3,19 +3,19 @@
     <img src="./assets/media/logos/default-dark.svg" alt="Logo" />
   </div>
   <div class="user">
-    <span>Benjamin Condori Vasquez</span>
+    <span>{{ currentUser()?.name }} {{ currentUser()?.lastName }}</span>
     <img
       #avatar
       (click)="toggleOptions()"
-      src="./assets/images/user_profile.png"
+      [src]="photo()"
       alt="Usuario"
     />
     <div #options class="options" *ngIf="showOptions">
       <div class="option-head">
-        <img src="./assets/images/user_profile.png" alt="Logo" />
+        <img [src]="photo()" alt="Logo" />
         <div class="option-info">
-          <span>Benjamin Condori Vasquez</span>
-          <span>benjamincondori7@gmail.com</span>
+          <span>{{ currentUser()?.name }} {{ currentUser()?.lastName }}</span>
+          <span>{{ currentUser()?.email }}</span>
         </div>
       </div>
       <hr />
@@ -25,7 +25,7 @@
         <a class="mb-5" (click)="hideOptions()" routerLink="/home/settings"
           >Configuración</a
         >
-        <a routerLink="/home" (click)="hideOptions()">Salir</a>
+        <a  (click)="logout()">Salir</a>
       </div>
     </div>
   </div>
