--- a/src/app/auth/pages/login-page/login-page.component.html
+++ b/src/app/auth/pages/login-page/login-page.component.html
@@ -3,16 +3,37 @@
   <div class="forms-container">
     <div class="signin-signup">
       <!-- Login form -->
-      <form action="#" [@slideIn] class="sign-in-form">
+      <form
+        [formGroup]="loginForm"
+        (ngSubmit)="login()"
+        [@slideIn]
+        class="sign-in-form"
+      >
         <h2 class="title">Iniciar Sesión</h2>
         <div class="input-field">
           <i class="fas fa-user"></i>
-          <input type="text" placeholder="Correo electrónico" />
+          <input
+            formControlName="email"
+            type="text"
+            placeholder="Correo electrónico"
+          />
         </div>
+        <span *ngIf="isValidField('email')" class="text-danger">
+          {{ getMessageError("email") }}
+        </span>
+
         <div class="input-field">
           <i class="fas fa-lock"></i>
-          <input type="password" placeholder="Contraseña" />
+          <input
+            formControlName="password"
+            type="password"
+            placeholder="Contraseña"
+          />
         </div>
+        <span *ngIf="isValidField('password')" class="text-danger">
+          {{ getMessageError("password") }}
+        </span>
+
         <button type="submit" class="btn-custom solid">Iniciar sesión</button>
       </form>
     </div>
