--- a/src/app/grapher/pages/grapher-page/grapher-page.component.css
+++ b/src/app/grapher/pages/grapher-page/grapher-page.component.css
@@ -1,6 +1,7 @@
 .diagramador {
   display: flex;
   flex-direction: column;
+  width: 100%;
   min-height: 100vh;
   background-color: var(--color-red-50);
   padding: 15px 25px 15px 15px;
@@ -61,6 +62,8 @@
 }
 
 .canvas {
+  /* min-height: calc(100vh - 120px); 
+  width: 100%; */
   display: flex;
   flex: 1;
   padding: 10px;
@@ -71,7 +74,13 @@
   border: 1px solid var(--color-gray-300);
   border-radius: 8px;
   min-height: calc(100vh - 120px); 
+  /* width: 100%; */
   background-color: #fff;
+}
+
+#canvas {
+  border: 1px solid #ccc;
+  border-radius: 10px;
 }
 
 .shapes {
