--- a/src/app/home/pages/settings-page/settings-page.component.css
+++ b/src/app/home/pages/settings-page/settings-page.component.css
@@ -144,6 +144,9 @@
   box-shadow: 0 0 20px rgba(0, 0, 0, 0.1);
   overflow: hidden;
   cursor: pointer;
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
 
 .image-preview:hover::before {
@@ -162,9 +165,10 @@
 }
 
 #image-preview {
-  width: 100%;
-  height: 100%;
-  object-fit: cover;
+  max-width: 100%;
+  max-height: 100%;
+  border-radius: 10px;
+  /* object-fit: cover; */
 }
 
 .edit-icon, .delete-icon {
@@ -195,6 +199,10 @@
   border-radius: 5px;
   font-size: 12px;
   white-space: nowrap;
+}
+.delete-icon:hover {
+  background-color: var(--color-red-400);
+  color: #fff;
 }
 
 .edit-icon {
