--- a/src/app/home/pages/home-page/home-page.component.html
+++ b/src/app/home/pages/home-page/home-page.component.html
@@ -7,6 +7,7 @@
   </div>
 
   <app-modal></app-modal>
+  <app-modal-add-collaborator></app-modal-add-collaborator>
 
   <div class="container-body">
     <form [formGroup]="searchForm">
@@ -22,8 +23,6 @@
     </form>
 
     <div *ngIf="loadingProjects" class="no-projects">
-      <!-- <h2>Cargando proyectos...</h2>
-      <img src="./assets/images/no_data.svg" alt="no data" /> -->
       <app-loader></app-loader>
     </div>
 
@@ -69,12 +68,12 @@
           </div>
         </div>
       </div>
-    
+
       <div *ngIf="projects.length === 0" class="no-projects">
         <h2>No se encontraron resultados</h2>
         <img src="./assets/images/no_data.svg" alt="no data" />
       </div>
-    
+
       <div *ngIf="projects.length > 0" class="pagination-container">
         <pagination-controls
           class="custom-pagination"
@@ -82,6 +81,28 @@
           previousLabel="Anterior"
           nextLabel="Siguiente"
         ></pagination-controls>
+      </div>
+    </div>
+  </div>
+
+  <div class="container-head mt-50">
+    <h1 class="title">Mis Colaboraciones</h1>
+    <button (click)="openModalAddCollaborator()" class="custom-button">
+      Añadirme a un proyecto
+    </button>
+  </div>
+
+  <div class="container-body">
+    <div *ngIf="loadingCollaborations" class="no-projects">
+      <app-loader></app-loader>
+    </div>
+
+    <div *ngIf="!loadingCollaborations">
+      <app-slider [cards]="collaborations"></app-slider>
+
+      <div *ngIf="collaborations.length === 0" class="no-projects">
+        <h2>No tienes colaboraciones</h2>
+        <img src="./assets/images/no_data.svg" alt="no data" />
       </div>
     </div>
   </div>
