--- a/src/app/grapher/components/modal-share/modal-share.component.html
+++ b/src/app/grapher/components/modal-share/modal-share.component.html
@@ -1,12 +1,12 @@
 <div class="modal" [ngStyle]="{ display: isOpen ? 'block' : 'none' }">
   <div class="modal-content">
     <div class="modal-header">
-      <h2>Link De Invitación</h2>
+      <h2>Token De Invitación</h2>
       <span class="close" (click)="closeModal()">&times;</span>
     </div>
     <div class="modal-body">
       <div class="content-text">
-        <p>Copia el enlace y compártelo</p>
+        <p>Copia el token y compártelo</p>
       </div>
       <div class="content-link">
         <input [value]="link?.shareUrl" type="text" readonly>
