--- a/src/app/home/components/modal-add-collaborator/modal-add-collaborator.component.html
+++ b/src/app/home/components/modal-add-collaborator/modal-add-collaborator.component.html
@@ -1,13 +1,12 @@
 <div class="modal" [ngStyle]="{ display: isOpen ? 'block' : 'none' }">
   <div class="modal-content">
     <div class="modal-header">
-      <h2>Agregarme a un proyecto</h2>
+      <h2>Unirme a un proyecto</h2>
       <span class="close" (click)="closeModal()">&times;</span>
     </div>
     <form [formGroup]="myForm" (ngSubmit)="onSubmit()">
       <div class="modal-body">
         <div class="form-content">
-          <!-- <label for="token">Token:</label> -->
           <input
             formControlName="token"
             class="custom-input"
