--- a/src/styles.css
+++ b/src/styles.css
@@ -520,3 +520,13 @@ button {
   padding: 10px
 } */
 
+/* 
+#canvasContainer {
+  max-width: 1100px;
+  max-height: 600px;
+  overflow: scroll;
+} */
+
+
+
+
